Fixed bottom sched visibility

--- a/HTML/Activity1.2/WineFestivalSchedule/style.css
+++ b/HTML/Activity1.2/WineFestivalSchedule/style.css
@@ -66,6 +66,7 @@ footer h3 {
   max-width: 940px;
   margin: 0 auto;
   height: 800px;
+  padding-bottom: 290px;
 }
 
 
